are now properly quoted by readline completion. Expand ~ in filename only at
beginning of name. Expand ~user.

Exposed signals via the new `signals-case` command, built upon `$&catch`.

Allow raising a signal via the new `raise` command.

Changed `$&catch` to check for unprocessed signals after executing body.

Implemented `%catch` as the internal form of `catch`.

Note that the changes around signal handling represents an incompatible
change to previously-undocumented behavior. If you reverse-engineered signal
handling and made it work for your application, my apologies. (I'm pretty
confident that someone who had tried this should have complained about the
untenable use-cases of the initial signals interface.)

The `$&fork` primitive sets $pid to the forked shell's own PID rather than
that of the parent shell.

The `$&fork` primitive sets $signals to (). Assignment of a valid list to
the signals variable from a forked command has no effect.

xs 1.1 to xs 1.2
----------------

The `echo` builtin handles combined `-n` and `--` options.

Stripped out a lot of unused code (~10% by weight).

Unicode escapes are now delimited, like \u'n...'. The fixed-length forms
\unnnn and \Unnnnnnnn are deprecated, but will remain available through
all of the xs 1.x releases.

Rewrote the man page.

Reworked `pushd`, `popd` and `dirs` commands. The `pushd` command is no
longer broken by paths which contain spaces. The directory list is now
laid out vertically.

Reworked locale initialization to ensure that `$&wid` works as designed.

Accept printf format modifier '.

Extended the `limit` command to expose all Linux (2.6+) -specific settings.

Throwing from a catch (this includes other syntax which exercises catch
and throw, e.g. escape) no longer leaves signal handling blocked.

Upward funargs *do* work. Documented with sample code.

The popd builtin returns true.

Reworked `%interactive-loop` to show the "type" of error caught; this